--- a/src/components/Todo/ui/AddTodoButton/AddTodoButton.module.scss
+++ b/src/components/Todo/ui/AddTodoButton/AddTodoButton.module.scss
@@ -4,13 +4,7 @@
   column-gap: 10px;
 }
 
-.modalTitle {
-  margin-bottom: 30px;
-  font: var(--font-xl);
+.input {
+  width: 300px;
 }
 
-.actionButtons {
-  display: flex;
-  justify-content: flex-end;
-  column-gap: 10px;
-}
