--- a/src/components/Todo/ui/TodoList/TodoList.module.scss
+++ b/src/components/Todo/ui/TodoList/TodoList.module.scss
@@ -19,12 +19,12 @@
 
 .title {
   margin-bottom: 20px;
-  font: var(--font-l);
+  font: var(--font-xl);
   text-transform: uppercase;
 }
 
 .divider {
   background-color: var(--accent-color);
-  margin: 10px;
+  margin: 20px 0;
 }
 
